[package]
name = "pf_age_entry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
pf_age_entry_macro={path="../pf_age_entry_macro"}
pf_ndk_raw={path="../pf_ndk_raw"}
android_logger="0.10.1"
log="0.4.14"
lazy_static = "1.4.0"
pf_age_event={path="../pf_age_event"}
