[package]
name = "pf_age_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pf_age_entry={path="../pf_age_entry"}
pf_age_event= {path="../pf_age_event"}

[[example]]
name="hello"
crate-type=["cdylib"]

[[example]]
name="color"
crate-type=["cdylib"]

[[example]]
name="traingle"
crate-type=["cdylib"]
