[package]
name = "pf_age_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pf_age_entry={path="../pf_age_entry"}
pf_age_event= {path="../pf_age_event"}

[[example]]
name="hello"
crate-type=["cdylib"]

[[example]]
name="color"
crate-type=["cdylib"]

[[example]]
name="traingle"
crate-type=["cdylib"]

[package.metadata.android.sdk]
min_sdk_version = 28
target_sdk_version = 30
max_sdk_version = 30

[[package.metadata.android.uses_feature]]
name = "glEsVersion"
required = true
version = 0x00030003

[package.metadata.android]
#opengles_version = [3, 3]
opengles_version = [6,6]
